--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
   <!-- Stylesheets - 相対パス -->
-  <!-- <link rel="stylesheet" href="assets/css/header.css"> -->
+  <link rel="stylesheet" href="assets/css/header.css">
   <link rel="stylesheet" href="assets/css/index.css">
   <link rel="stylesheet" href="assets/css/footer.css">
 </head>
@@ -669,7 +669,7 @@
   <div class="footer"></div>
 
   <!-- Scripts -->
-  <!-- <script src="assets/js/header.js" defer></script> -->
+  <script src="assets/js/header.js" defer></script>
   <script src="assets/js/footer.js" defer></script>
   
   <!-- Intersection Observer -->
